--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,540 @@
 
 */
 
+/* Стили страницы */
+
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--main-font);
+  font-variation-settings: 'wght' var(--text-weight);
+  background-color: var(--bg-color);
+  background-image: var(--bg-gradient);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+
+/* Общий контейнер для хедера и карточек */
+.main-container {
+  inline-size: 100%;
+  max-inline-size: var(--content-width);
+  margin: 0 auto;
+  padding: 0;
+}
+
+/* Хедер — БЕЛЫЙ БЛОК С ФИКСИРОВАННОЙ ВЫСОТОЙ */
+.header {
+  inline-size: calc(100% + 4px);
+  block-size: calc(var(--header-height) + 3px); 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--bg-color);
+  border: var(--card-border) solid var(--accent-color);
+  margin: 100px auto 95px auto;
+}
+
+.header__content {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(1rem, 0.6rem + 2vw, 2rem);
+  align-items: center;
+  inline-size: 100%;
+  max-inline-size: var(--content-width + 4px);
+  padding: 1rem;
+}
+
+/* Стили заголовка */
+.header__title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 17px;
+  margin: 0;
+  padding: 0;
+}
+
+.header__title-main {
+  font-family: var(--accent-font);
+  font-size: var(--title-main-size);
+  line-height: 1;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: var(--accent-color);
+}
+
+.header__title-sub {
+  font-family: var(--accent-font);
+  font-size: var(--title-sub-size);
+  line-height: 1;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: var(--accent-color);
+}
+
+/* Контент */
+.content {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  gap: 50px; 
+  align-items: center;
+  inline-size: 100%;
+}
+
+/* Карточка */
+.card {  
+  background: var(--bg-color);
+  border: var(--card-border) solid var(--accent-color);
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.card__header {
+  background: var(--bg-color);
+  padding: 0;            
+  margin: 0;
+}
+
+.card__title {
+  font-family: 'Inter', sans-serif; 
+  font-size: var(--card-title-size);                                                  
+  color: #000000;                   
+  font-variation-settings: 'wght' 715;        
+  margin: 0; 
+  padding: 5px 10px;
+  background: var(--bg-color); 
+}                 
+
+
+.card__content {
+  padding:  25px 25px 20px 25px; 
+  flex-grow: 1;
+  background: var(--bg-color); 
+  min-block-size: 0; 
+}
+
+.card__text {
+  font-size: 18px;
+}
+
+.card__text p + p {
+  margin-top: 1.5rem; 
+}
+
+.card__image-container {
+  display: flex;
+  aspect-ratio: 1 / 1; 
+  position: relative;
+  inline-size: calc(100% );
+  border-block-start: var(--card-border) solid var(--accent-color);
+  border-block-end: var(--card-border) solid var(--accent-color);
+}
+
+.card__image {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position:100%;
+  display: block;
+  filter: contrast(1.1) brightness(0.9);
+}
+
+ /* Лейбыл */
+.card__label {
+  position: absolute;
+  top: clamp(1rem, 0.5rem + 2vw, 1.5rem);
+  right: clamp(1rem, 0.5rem + 2vw, 1.5rem); 
+  font-family: var(--accent-font);
+  font-size: 14px; 
+  font-weight: 400;
+  color: #000000;
+  opacity: 0.5;
+  mix-blend-mode: hard-light;
+  pointer-events: none;
+}
+
+/* Обводка текста */
+@supports (text-stroke: 1px var(--label-bg)) or (-webkit-text-stroke: 1px var(--label-bg)) {
+  .card__label {
+    -webkit-text-stroke: 1px #ffffff;
+    text-stroke: 1px #ffffff;
+    paint-order: stroke fill;
+  }
+}
+
+.card__label {
+  text-shadow: 
+    -1px -1px 0 var(--label-bg),
+    1px -1px 0 var(--label-bg),
+    -1px 1px 0 var(--label-bg),
+    1px 1px 0 var(--label-bg);
+}
+
+/* Кнопки */
+.card__actions {
+  display: grid;
+  grid-template-columns: min-content min-content;
+  align-items: center;
+  justify-content: end;
+  padding: 1rem 1.7rem; 
+  background: var(--bg-color);
+  margin-top: 0;
+  padding-top: 5px;
+  padding-bottom: 25px;
+  gap: 5px;
+}
+
+.card__icon-button {
+  background: transparent;
+  border: none;
+  border-right: 2px solid var(--accent-color);
+  padding: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  inline-size: 44px;
+  block-size: 38px;
+  transition: border-color 0.3s ease;
+  margin: 0;
+  border: 2px solid transparent; 
+  transition: border-color 0.3s ease;
+}
+
+.card__icon-button:focus {
+  outline: none;
+  border-color: var(--accent-color);  
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--main-color, #000);
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
+}
+
+.card__like-button {
+  background: var(--bg-color);
+  border: none;
+  padding: 0 1rem;
+  font-family: var(--accent-font);
+  font-size: 16px;
+  line-height: 90%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  inline-size: 130px;
+  block-size: 38px;
+  margin: 0;
+  position: relative;
+  overflow: hidden; 
+}
+
+.like-icon {
+  width: 39px;   
+  height: 36px;
+  inline-size: 39px;
+  block-size: 36px;
+}
+
+/* Базовые кнопки */
+.button {
+  position: relative;
+  background: var(--bg-color);
+  border: var(--card-border) solid var(--accent-color);
+  padding: 0.5rem 1rem;
+  font-family: var(--accent-font);
+  font-size: 0.75rem;
+  overflow: hidden;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  min-block-size: 2.5rem;
+}
+
+.button:focus {
+  outline: none;
+  box-shadow: var(--shadow);
+  transition: box-shadow 0.3s ease;
+}
+
+.button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  inline-size: 100%;
+  block-size: 100%;
+  background: var(--accent-color);
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-in-out;
+  z-index: 1;
+}
+
+.button:hover::before {
+  transform: translateX(0);
+}
+
+.button__text {
+  position: relative;
+  z-index: 2;
+  color: var(--button-text-color);
+  mix-blend-mode: difference;
+  font-size: 14px;
+}
+
+.button:hover .button__text {
+  color: var(--bg-color);
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 2px solid var(--accent-color);
+  padding: 30px;
+  background: var(--modal-bg);
+  max-width: 353px;
+  width: 100%;
+  box-shadow: var(--shadow);
+  z-index: 1000;
+  gap: 30px;
+  margin: 0 auto;
+}
+
+.modal::backdrop {
+  background: rgba(0, 0, 0, 0.75);
+}
+
+.modal__content {
+  display: grid;
+  grid-template-areas: 
+    "icon text"
+    "button button";
+  grid-template-columns: auto 1fr;
+  gap: 20px;
+  align-items: center;
+}
+
+.modal__icon {
+  grid-area: icon;
+  width: 39px;
+  height: 39px;
+  color: var(--accent-color);
+}
+
+.modal__text {
+  grid-area: text;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.modal__text-line {
+  font-family: var(--accent-font);
+  font-size: 14px;
+  line-height: 150%;
+  text-transform: uppercase;
+  color: var(--accent-color);
+  display: block;
+}
+
+.modal__button {
+  width: 293px;
+  height: 38px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--bg-color); 
+  border: 2px solid var(--accent-color); 
+  font-family: var(--accent-font);
+  font-size: 14px;
+  color: var(--accent-color); 
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: var(--shadow);
+}
+
+.save {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+.card__save-button {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 14px 18px;
+  background: var(--bg-color); 
+  color: var(--accent-color); 
+  border: 2px solid var(--accent-color); 
+  font-family: var(--accent-font);
+  font-size: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  color: #fff; 
+  margin-top: 11px;
+}
+
+.card__save-button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: var(--accent-color);
+  transition: left 0.5s ease;
+  z-index: 0;
+}
+
+.card__save-button:hover::before {
+  left: 0;
+}
+
+.card__save-button:hover {
+  transform: translate(2px, 2px);
+  box-shadow: var(--shadow-hover);
+}
+
+.button__text,
+.discet_visual {
+  position: relative;
+  z-index: 1;
+  mix-blend-mode: difference;
+}
+
+.discet_visual {
+  width: 22px;
+  height: 21px;
+}
+
+/* Фильтры для картинок карточек */
+
+/* Сепия - винтажный эффект */
+.filter-sepia {
+  filter: contrast(1.1) brightness(0.9) sepia(80%);
+}
+
+/* Черно-белый - классический монохром */
+.filter-grayscale {
+  filter: contrast(1.1) brightness(0.9) grayscale(100%);
+}
+
+/* Инверсия - негативное изображение */
+.filter-invert {
+  filter: contrast(1.1) brightness(0.9) invert(100%);
+}
+
+/* Повышенная насыщенность - яркие цвета */
+.filter-saturate {
+  filter: contrast(1.1) brightness(0.9) saturate(200%);
+}
+
+/* Высокий контраст но все покрыто туманом как и моё понимание - драматический эффект */
+.filter-contrast {
+  filter: contrast(2) brightness(0.8) saturate(120%);
+  filter: contrast(2) brightness(0.7) grayscale(0.5);
+  filter: blur(2px) contrast(0.4) brightness(1.2);
+}
+
+/* Размытие - мягкий фокус */
+.filter-blur {
+  filter: contrast(1.1) brightness(0.9) blur(1px);
+}
+
+/* Сдвиг hue - цветовая трансформация */
+.filter-hue {
+  filter: contrast(1.1) brightness(0.9) hue-rotate(90deg);
+}
+
+/* Для мобильной версии */
+@media (width <= 375px) {
+
+  .header {
+    /* Высота хедера по макету */
+    block-size: 327px;
+    margin-bottom: 98px;
+  }
+
+  .header__title-main {
+    font-size: 49px;
+    line-height: 100%;
+  }
+ 
+  .header__title-sub {
+    font-size: 14px;
+    line-height: 100%;
+  }
+
+  .card {
+    block-size: 760px;
+  }
+
+  .card__title {
+    height: 52px;
+    font-size: 18px; 
+    padding: 8px 12px; 
+   
+  }
+
+   .card__save-button {
+    inline-size: 305px;
+    block-size: auto; 
+    min-block-size: 80px; 
+    border: 2px solid var(--accent-color);
+    background: var(--bg-color);
+    font-family: var(--accent-font);
+    font-size: 14px;
+    margin: 0;
+    padding: 15px;
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    justify-content: center;
+    gap: 8px; 
+  }
+
+  
+  .discet_visual {
+    width: 28px; 
+    height: 28px;
+    order: 1; 
+  }
+
+  /* Текст кнопки */
+  .card__save-button .button__text {
+    order: 2; 
+    font-size: 14px;
+    text-align: center;
+    white-space: nowrap; 
+  }
+
+  /* Контейнер для кнопки */
+  .save {
+    margin-top: 50px;
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+.modal {
+  padding: 40px;
+}
+
 }
