--- a/styles/style.css
+++ b/styles/style.css
@@ -11,8 +11,6 @@
 */
 
 /* Стили страницы */
-
-/* Стили страницы */
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
@@ -50,7 +48,7 @@
   flex-direction: column;
   align-items: center;
   inline-size: 100%;
-  max-inline-size: var(--content-width + 4px);
+  max-inline-size: var(--content-width);
   padding: 1rem;
   gap: 17px;
   margin: 0;
@@ -77,7 +75,7 @@
 /* Контент */
 .content {
   padding: 0;
-  display: flex;
+  display: block;
   justify-content: center;
 }
 
@@ -193,13 +191,12 @@
 
 .button:focus {
   outline: none;
-  box-shadow: none;
 }
 
 .button:focus-visible {
   border-color: var(--accent-color);
-  outline: 2px solid var(--accent-color);
-  outline-offset: 3px;
+  box-shadow: 2px 2px 0px var(--accent-color);
+  outline: none;
 }
 
 .button::before {
@@ -311,7 +308,7 @@
   height: 21px;
 }
 
-.modal {
+.modal[open] {
   border: 2px solid var(--accent-color);
   padding: 30px;
   background: var(--modal-bg);
@@ -389,13 +386,11 @@
 
 /*  Мобильная версия  */
 @media (width <= 375px) {
+
   .header {
     block-size: auto;
     padding: 105px 0 105px;
     margin: 95px 0 80px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
 
   .header__title-main { 
@@ -408,12 +403,10 @@
     line-height: 100%;
   }
   
-
   .content {
     padding-top: 20px;
   }
 
- 
   .card__title { 
     font-size: 18px; 
    }
@@ -457,12 +450,10 @@
   }
 
   .save {
-    margin-top: 40px;
-    margin-bottom: 100px;
     align-items: center;
   }
 
-  .modal {
+  .modal[open] {
     max-inline-size: 341px;
     padding: 30px 40px;
   }
@@ -471,14 +462,12 @@
     inline-size: 100%;
     max-inline-size: 261px;
     block-size: 38px;
-    margin: 20px auto 0;
+    margin: 27px auto 0;
   }
 
   .modal__content {
-    display: grid;
     grid-template-areas: "icon text";
     grid-template-columns: 39px 1fr;
-    align-items: center;
     inline-size: 100%;
   }
 
@@ -486,10 +475,5 @@
     max-inline-size: none;
     inline-size: 100%;
     margin: 0;
-  }
-
-  .modal__icon {
-    width: 39px;
-    height: 39px;
   }
 }
